--- a/src/components/Main/Portfolio/Portfolio.css
+++ b/src/components/Main/Portfolio/Portfolio.css
@@ -12,18 +12,32 @@
   font-style: normal;
   font-weight: 400;
   line-height: 20px;
-  margin: 0 0 50px;
+  margin: 0;
 }
 
-.portfolio__list {
-  display: flex;
-  flex-flow: column;
+.portfolio__nav {
+  margin-top: 30px;
 }
 
-.portfolio__list-item {
+.portfolio__nav-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.portfolio__links-item {
   display: flex;
-  align-items: center;
   justify-content: space-between;
+}
+
+.portfolio__nav-list-item {
+  border-bottom: 1px #e6e6e6 solid;
+  margin-top: 20px;
+  padding-bottom: 20px;
+}
+
+.portfolio__nav-list-item:last-of-type {
+  border: none;
 }
 
 .item__text {
@@ -34,10 +48,4 @@
   font-weight: 400;
   line-height: 50px;
   letter-spacing: -1.2px;
-}
-
-.line-light {
-  height: 1px;
-  background: #e8e8e8;
-  margin: 20px 0;
 }
