--- a/src/components/Main/Techs/Techs.css
+++ b/src/components/Main/Techs/Techs.css
@@ -11,7 +11,24 @@
   width: 460px;
 }
 
-.techs-title {
+.techs__title {
+  color: #000;
+  font-family: Inter;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: -0.88px;
+  margin: 0;
+}
+
+.techs__title-line {
+  border-bottom: 1px #000 solid;
+  padding-bottom: 23px;
+  margin-bottom: 90px;
+}
+
+.techs__description-title {
   color: #000;
   text-align: center;
   font-family: Inter;
@@ -20,22 +37,31 @@
   font-weight: 400;
   line-height: 58px;
   letter-spacing: -2px;
-  margin: 0 0 26px;
+  margin: 0;
 }
 
-.techs__description {
-  display: flex;
-  align-items: center;
-  flex-flow: column;
+.techs__description-text {
+  width: 460px;
+  color: #000;
+  text-align: center;
+  font-family: Inter;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  letter-spacing: -0.56px;
+  margin: 26px auto 0;
 }
 
 .techs__list {
   display: flex;
-  margin-top: 100px;
+  list-style: none;
+  padding: 0;
   gap: 10px;
+  margin: 100px auto 0;
 }
 
-.techs__list_item {
+.techs__list-item {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -45,7 +71,7 @@
   height: 60px;
 }
 
-.techs__list_item_text {
+.techs__list-item-text {
   color: #000;
   text-align: center;
   font-family: Inter;
