feat: add signup

--- a/src/components/Register/Signup.css
+++ b/src/components/Register/Signup.css
@@ -1,15 +1,15 @@
-.signin {
+.signup {
   margin-top: 40px;
   height: 100%;
 }
 
-.signin__form {
+.signup__form {
   display: flex;
   flex-flow: column;
   height: 100%;
 }
 
-.signin__form-title {
+.signup__form-title {
   color: #000;
   font-family: Inter;
   font-size: 24px;
@@ -20,7 +20,7 @@
   margin-bottom: 40px;
 }
 
-.signin__form-input {
+.signup__form-input {
   display: flex;
   flex-flow: column;
   gap: 5px;
@@ -33,7 +33,7 @@
   line-height: normal;
 }
 
-.signin__input-label {
+.signup__input-label {
   color: #a0a0a0;
   font-family: Inter;
   font-size: 10px;
@@ -42,14 +42,14 @@
   line-height: normal;
 }
 
-.signin__input {
+.signup__input {
   border: none;
   border-bottom: 1px solid #e8e8e8;
   outline: none;
   padding-bottom: 10px;
 }
 
-.signin__form-button {
+.signup__form-button {
   height: 45px;
   border-radius: 3px;
   background: #3456f3;
@@ -64,18 +64,18 @@
   margin-top: auto;
 }
 
-.signin__form-input-email {
+.signup__form-input-email {
   margin-bottom: 24px;
 }
 
-.signin__form-nav {
+.signup__form-nav {
   display: flex;
   justify-content: center;
   gap: 6px;
   margin: 16px 0 70px;
 }
 
-.signin__form-text {
+.signup__form-text {
   color: #a0a0a0;
   text-align: center;
   font-family: Inter;
@@ -85,7 +85,7 @@
   line-height: normal;
 }
 
-.signin__form-link {
+.signup__form-link {
   color: #3456f3;
   text-align: center;
   font-family: Inter;
