--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,8 +2,8 @@
   display: flex;
   flex-flow: column;
   align-items: center;
-  height: 172px;
   padding: 0 30px;
+  margin-bottom: 20px;
 }
 
 .footer__text {
@@ -33,6 +33,9 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
+  border-top: 1px solid #e8e8e8;
+  padding-top: 20px;
+  margin-top: 20px;
 }
 
 .footer__nav-list {
@@ -51,8 +54,4 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-}
-
-.footer__line {
-  margin: 20px 0;
 }
