--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,13 +1,15 @@
 .profile {
   margin: 74px auto;
-  height: 100%;
   width: 410px;
+  height: calc(100vh - 250px);
 }
 
 .profile__form {
   display: flex;
   flex-flow: column;
+  justify-content: space-between;
   height: 100%;
+  margin: auto 0px;
 }
 
 .profile__form-title {
@@ -19,35 +21,39 @@
   line-height: normal;
   margin: 0;
   margin-bottom: 40px;
+  text-align: center;
 }
 
 .profile__form-input {
   display: flex;
-  flex-flow: column;
+  align-items: center;
   gap: 5px;
 
   color: #000;
   font-family: Inter;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-}
-
-.profile__input-label {
-  color: #a0a0a0;
-  font-family: Inter;
-  font-size: 10px;
+  font-size: 11px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  border-bottom: 1px solid #e8e8e8;
+  padding-bottom: 16px;
+}
+
+.profile__input-label {
+  color: #000;
+  font-family: Inter;
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  white-space: nowrap;
 }
 
 .profile__input {
   border: none;
-  border-bottom: 1px solid #e8e8e8;
   outline: none;
-  padding-bottom: 10px;
+  width: 100%;
+  text-align: end;
 }
 
 .profile__form-button {
@@ -66,14 +72,13 @@
 }
 
 .profile__form-input-email {
-  margin-bottom: 24px;
 }
 
 .profile__form-nav {
   display: flex;
+  flex-flow: column;
   justify-content: center;
-  gap: 6px;
-  margin: 16px 0 70px;
+  gap: 16px;
 }
 
 .profile__form-text {
@@ -87,11 +92,32 @@
 }
 
 .profile__form-link {
-  color: #3456f3;
+  color: #ff3055;
   text-align: center;
   font-family: Inter;
-  font-size: 14px;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.profile__btn-save {
+  color: #000;
+  text-align: center;
+  font-family: Inter;
+  font-size: 13px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  background: transparent;
+}
+
+.profile__error {
+  color: #ff3055;
+  font-family: Inter;
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin: 6px 0 24px;
 }
