--- a/src/components/Movies/SearchForm/SearchForm.css
+++ b/src/components/Movies/SearchForm/SearchForm.css
@@ -53,3 +53,9 @@
   font-weight: 500;
   line-height: normal;
 }
+
+@media screen and (max-width: 768px) {
+  .form-search {
+    margin-bottom: 130px;
+  }
+}
