--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -32,3 +32,9 @@
   background: #ffffff;
   color: #000000;
 }
+
+@media screen and (max-width: 768px) {
+  .header {
+    padding: 18px 30px;
+  }
+}
