--- a/src/components/Main/Promo/Promo.css
+++ b/src/components/Main/Promo/Promo.css
@@ -52,3 +52,39 @@
   background-color: transparent;
   margin-top: 146px;
 }
+
+@media screen and (max-width: 768px) {
+  .promo {
+    flex-flow: column;
+    align-items: center;
+  }
+
+  .promo__globus {
+    order: -1;
+  }
+
+  .promo__container-title {
+    color: #fff;
+    text-align: center;
+    font-feature-settings: 'clig' off, 'liga' off;
+    font-family: Inter;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 50px;
+    margin-top: 48px;
+  }
+
+  .promo__container {
+    align-items: center;
+  }
+
+  .promo__container-text {
+    text-align: center;
+    margin-top: 22px;
+  }
+
+  .promo__container-btn {
+    margin-top: 92px;
+  }
+}
