--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -4,18 +4,8 @@
   padding: 70px 70px 80px;
 }
 
-.movies-page__more {
-  width: 320px;
-  height: 36px;
-  border: none;
-  color: #000;
-  text-align: center;
-  font-family: Inter;
-  font-size: 12px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-
-  margin: 50px 0;
-  align-self: center;
+@media screen and (max-width: 768px) {
+  .movies-page {
+    padding: 80px 30px;
+  }
 }
