--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -33,7 +33,11 @@
   color: #000000;
 }
 
-@media screen and (max-width: 768px) {
+.header__logo-link {
+  height: 38px;
+}
+
+@media screen and (max-width: 1280px) {
   .header {
     padding: 18px 30px;
   }
