--- a/src/components/Main/Promo/Promo.css
+++ b/src/components/Main/Promo/Promo.css
@@ -38,7 +38,10 @@
   height: 304px;
 }
 
-.promo__container-btn {
+.promo__container-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border-radius: 3px;
   border: 1px solid #fff;
   color: #fff;
@@ -84,7 +87,7 @@
     margin-top: 22px;
   }
 
-  .promo__container-btn {
+  .promo__container-link {
     margin-top: 92px;
   }
 }
