--- a/src/components/Main/AboutMe/AboutMe.css
+++ b/src/components/Main/AboutMe/AboutMe.css
@@ -100,3 +100,47 @@
     height: 307px;
   }
 }
+
+@media screen and (max-width: 768px) {
+  .me {
+    padding: 70px 18px 0;
+  }
+
+  .me__title {
+    font-size: 18px;
+    line-height: normal;
+    letter-spacing: -0.72px;
+  }
+
+  .me__private-container {
+    margin-top: 60px;
+  }
+
+  .me__private-name {
+    font-size: 30px;
+    letter-spacing: -1.2px;
+  }
+
+  .me__private-bio {
+    font-size: 11px;
+    font-weight: 500;
+    line-height: 16px;
+  }
+
+  .me__private-about {
+    font-size: 11px;
+    line-height: 16px;
+    margin-bottom: 40px;
+  }
+
+  .me__private-image {
+    width: 300px;
+    height: auto;
+    margin: 0 auto;
+    order: -1;
+  }
+
+  .me__private-container {
+    flex-wrap: wrap;
+  }
+}
