--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -26,3 +26,20 @@
   font-weight: 500;
   line-height: 16px;
 }
+
+@media screen and (max-width: 768px) {
+  .header__anonymous-links {
+    gap: 14px;
+  }
+
+  .header__anonymous-links-signup {
+    font-size: 10px;
+    line-height: 16px;
+  }
+
+  .header__anonymous-signin {
+    font-size: 10px;
+    line-height: 16px;
+    padding: 5px 12px;
+  }
+}
