--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -55,3 +55,35 @@
   font-weight: 400;
   line-height: normal;
 }
+
+@media screen and (max-width: 768px) {
+  .footer__text {
+    font-size: 12px;
+  }
+
+  .footer__copyright-text {
+    font-size: 12px;
+    color: #a0a0a0;
+    margin-top: 30px;
+  }
+
+  .footer__nav-list-link {
+    font-size: 12px;
+  }
+
+  .footer__nav {
+    order: -1;
+  }
+
+  .footer__copyright-container {
+    flex-flow: column;
+    align-items: center;
+    padding-top: 30px;
+  }
+
+  .footer__nav-list {
+    flex-flow: column;
+    align-items: center;
+    gap: 12px;
+  }
+}
