--- a/src/components/Header/LoginHeader/LoginHeader.css
+++ b/src/components/Header/LoginHeader/LoginHeader.css
@@ -4,3 +4,9 @@
   background: #ffffff;
   padding: 70px 0 0;
 }
+
+@media screen and (max-width: 768px) {
+  .header-login {
+    justify-content: center;
+  }
+}
