--- a/src/components/Movies/MoviesCardList/MoviesCardList.css
+++ b/src/components/Movies/MoviesCardList/MoviesCardList.css
@@ -25,11 +25,23 @@
 
   margin: 50px 0;
   align-self: center;
+  border-radius: 6px;
+  background: #f9f9f9;
 }
 
 @media screen and (max-width: 1280px) {
   .movies__list {
     grid-template-columns: repeat(2, 1fr);
     gap: 30px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .movies__list {
+    grid-template-columns: 1fr;
+  }
+
+  .movies-page__more {
+    width: 240px;
   }
 }
