--- a/src/components/Movies/SearchForm/SearchForm.css
+++ b/src/components/Movies/SearchForm/SearchForm.css
@@ -59,3 +59,21 @@
     margin-bottom: 130px;
   }
 }
+
+@media screen and (max-width: 768px) {
+  .form-search__container-input {
+    font-size: 18px;
+  }
+
+  .form-search__container-input::placeholder {
+    font-size: 18px;
+  }
+
+  .form-search__container {
+    margin-bottom: 40px;
+  }
+
+  .form-search {
+    margin-bottom: 90px;
+  }
+}
