--- a/src/components/Navigation/ProfileButton/ProfileButton.css
+++ b/src/components/Navigation/ProfileButton/ProfileButton.css
@@ -1,4 +1,4 @@
-.profile__btn {
+.profile__link {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -12,7 +12,7 @@
   border: 0;
 }
 
-.profile__btn-text {
+.profile__link-text {
   color: #000;
   font-feature-settings: 'clig' off, 'liga' off;
   font-family: Inter;
@@ -22,6 +22,6 @@
   line-height: 12px;
 }
 
-.profile__btn-theme-light {
+.profile__link-theme-light {
   background: #ffffff;
 }
