--- a/src/components/PageNotFound/PageNotFound.css
+++ b/src/components/PageNotFound/PageNotFound.css
@@ -44,3 +44,17 @@
   margin: 0;
   margin-bottom: 60px;
 }
+
+@media screen and (max-width: 768px) {
+  .not-found__container-title {
+    font-size: 80px;
+  }
+
+  .not-found__container-text {
+    font-size: 12px;
+  }
+
+  .not-found__link-back {
+    font-size: 12px;
+  }
+}
