--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -43,8 +43,9 @@
   }
 }
 
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: 768px) {
   .header {
     padding: 18px 14px;
+    font-size: 10px;
   }
 }
