--- a/src/components/Layouts/LoginLayout/LoginLayout.css
+++ b/src/components/Layouts/LoginLayout/LoginLayout.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-flow: column;
   margin: 0 auto;
-  width: 396px;
+  max-width: 396px;
+  padding: 0 24px;
   height: 100vh;
 }
