--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -14,7 +14,7 @@
 
 .profile__form-title {
   color: #000;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-size: 24px;
   font-style: normal;
   font-weight: 500;
@@ -30,7 +30,7 @@
   gap: 5px;
 
   color: #000;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-size: 11px;
   font-style: normal;
   font-weight: 400;
@@ -41,7 +41,7 @@
 
 .profile__input-label {
   color: #000;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-size: 11px;
   font-style: normal;
   font-weight: 500;
@@ -63,7 +63,7 @@
   border: none;
   color: #fff;
   text-align: center;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 500;
@@ -84,7 +84,7 @@
 .profile__form-text {
   color: #a0a0a0;
   text-align: center;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -94,7 +94,7 @@
 .profile__form-link {
   color: #ff3055;
   text-align: center;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-size: 13px;
   font-style: normal;
   font-weight: 500;
@@ -104,7 +104,7 @@
 .profile__btn-save {
   color: #000;
   text-align: center;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-size: 13px;
   font-style: normal;
   font-weight: 400;
@@ -114,7 +114,7 @@
 
 .profile__error {
   color: #ff3055;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-size: 10px;
   font-style: normal;
   font-weight: 400;
