--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -9,7 +9,7 @@
 .footer__text {
   color: #a0a0a0;
   text-align: center;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-size: 13px;
   font-style: normal;
   font-weight: 400;
@@ -20,7 +20,7 @@
 
 .footer__copyright-text {
   color: #000;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-size: 13px;
   font-style: normal;
   font-weight: 400;
@@ -49,7 +49,7 @@
 .footer__nav-list-link {
   color: #000;
   text-align: right;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-size: 13px;
   font-style: normal;
   font-weight: 400;
