--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -17,7 +17,7 @@
 .header__nav-list-link {
   color: inherit;
   text-align: right;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-size: 13px;
   font-style: normal;
   font-weight: 400;
