--- a/src/components/Main/AboutMe/AboutMe.css
+++ b/src/components/Main/AboutMe/AboutMe.css
@@ -7,7 +7,7 @@
 
 .me__title {
   color: #000;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-size: 22px;
   font-style: normal;
   font-weight: 400;
@@ -34,7 +34,7 @@
 }
 
 .me__private-name {
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-size: 50px;
   font-style: normal;
   font-weight: 400;
@@ -45,7 +45,7 @@
 
 .me__private-about {
   color: #000;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -55,7 +55,7 @@
 
 .me__private-bio {
   color: #000;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
@@ -66,7 +66,7 @@
 
 .me__private-github {
   color: #000;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 500;
