--- a/src/components/Main/Portfolio/Portfolio.css
+++ b/src/components/Main/Portfolio/Portfolio.css
@@ -7,7 +7,7 @@
 
 .portfolio__title {
   color: #a0a0a0;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -42,7 +42,7 @@
 
 .item__text {
   color: #000;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-size: 30px;
   font-style: normal;
   font-weight: 400;
