--- a/src/components/Main/Promo/Promo.css
+++ b/src/components/Main/Promo/Promo.css
@@ -13,7 +13,7 @@
 
 .promo__container-title {
   color: #fff;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-size: 50px;
   font-style: normal;
   font-weight: 400;
@@ -25,7 +25,7 @@
 .promo__container-text {
   width: 310px;
   color: #fff;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-size: 13px;
   font-style: normal;
   font-weight: 400;
@@ -46,7 +46,7 @@
   border-radius: 3px;
   border: 1px solid rgba(255, 255, 255, 0.6);
   color: #fff;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-size: 12px;
   font-style: normal;
   font-weight: 500;
@@ -71,7 +71,7 @@
     color: #fff;
     text-align: center;
     font-feature-settings: 'clig' off, 'liga' off;
-    font-family: Inter;
+    font-family: Inter, sans-serif;
     font-size: 40px;
     font-style: normal;
     font-weight: 400;
