--- a/src/components/Movies/MoviesCard/MoviesCard.css
+++ b/src/components/Movies/MoviesCard/MoviesCard.css
@@ -23,7 +23,7 @@
 
 .movies__title {
   color: #000;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-size: 13px;
   font-style: normal;
   font-weight: 500;
@@ -52,7 +52,7 @@
 
 .movies__duration {
   color: #a0a0a0;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-size: 11px;
   font-style: normal;
   font-weight: 400;
