--- a/src/components/Movies/SearchForm/SearchForm.css
+++ b/src/components/Movies/SearchForm/SearchForm.css
@@ -24,7 +24,7 @@
   color: #fff;
   text-align: center;
   font-feature-settings: 'clig' off, 'liga' off;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-size: 11px;
   font-style: normal;
   font-weight: 500;
@@ -37,7 +37,7 @@
   outline: 0;
   color: #a0a0a0;
   font-feature-settings: 'clig' off, 'liga' off;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-size: 28px;
   font-style: normal;
   font-weight: 500;
@@ -47,7 +47,7 @@
 .form-search__container-input::placeholder {
   color: #a0a0a0;
   font-feature-settings: 'clig' off, 'liga' off;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-size: 28px;
   font-style: normal;
   font-weight: 500;
