--- a/src/components/Navigation/BurgerMenu/BurgerMenu.css
+++ b/src/components/Navigation/BurgerMenu/BurgerMenu.css
@@ -34,7 +34,7 @@
   color: #000;
   text-align: center;
   font-feature-settings: 'clig' off, 'liga' off;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 500;
