--- a/src/components/Navigation/ProfileButton/ProfileButton.css
+++ b/src/components/Navigation/ProfileButton/ProfileButton.css
@@ -15,7 +15,7 @@
 .profile__link-text {
   color: #000;
   font-feature-settings: 'clig' off, 'liga' off;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-size: 13px;
   font-style: normal;
   font-weight: 500;
