--- a/src/components/Signout/Signout.css
+++ b/src/components/Signout/Signout.css
@@ -5,7 +5,7 @@
 
 .signout__exit {
   color: #000;
-font-family: Inter;
+font-family: Inter, sans-serif;
 font-size: 24px;
 font-style: normal;
 font-weight: 500;
