--- a/src/components/Login/Signin.css
+++ b/src/components/Login/Signin.css
@@ -64,6 +64,11 @@
   margin-top: auto;
 }
 
+.signin__form-button:disabled {
+  background: #f9f9f9;
+  color: #000;
+}
+
 .signin__form-input-email {
   margin-bottom: 24px;
 }
