--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,7 +1,9 @@
 .profile {
   margin: 74px auto;
   max-width: 410px;
+  min-width: 410px;
   height: calc(100vh - 250px);
+  padding: 0 30px;
 }
 
 .profile__form {
@@ -71,9 +73,6 @@
   margin-top: auto;
 }
 
-.profile__form-input-email {
-}
-
 .profile__form-nav {
   display: flex;
   flex-flow: column;
@@ -102,14 +101,20 @@
 }
 
 .profile__btn-save {
-  color: #000;
+  color: #fff;
   text-align: center;
   font-family: Inter, sans-serif;
   font-size: 13px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  background: transparent;
+  background: #3456f3;
+  height: 45px;
+}
+
+.profile__btn-save:disabled {
+  background: #f9f9f9;
+  color: #000;
 }
 
 .profile__error {
