--- a/src/components/Login/Signin.css
+++ b/src/components/Login/Signin.css
@@ -49,6 +49,10 @@
   padding-bottom: 10px;
 }
 
+.signin__input:focus {
+  border-bottom: 1px solid #3456f3;
+}
+
 .signin__form-button {
   height: 45px;
   border-radius: 3px;
