--- a/src/components/Register/Signup.css
+++ b/src/components/Register/Signup.css
@@ -49,6 +49,10 @@
   padding-bottom: 10px;
 }
 
+.signup__input:focus {
+  border-bottom: 1px solid #3456f3;
+}
+
 .signup__form-button {
   height: 45px;
   border-radius: 3px;
