--- a/src/components/Movies/SearchForm/SearchForm.css
+++ b/src/components/Movies/SearchForm/SearchForm.css
@@ -9,7 +9,6 @@
   justify-content: space-between;
   border-bottom: 1px solid #e8e8e8;
   padding-bottom: 13px;
-  margin-bottom: 32px;
 }
 
 .form-search__container-button {
@@ -29,6 +28,11 @@
   font-style: normal;
   font-weight: 500;
   line-height: 18px;
+}
+
+.form-search__container-button:disabled {
+  background: #f9f9f9;
+  color: #000;
 }
 
 .form-search__container-input {
@@ -54,6 +58,17 @@
   line-height: normal;
 }
 
+.form-search__error {
+  margin: 0;
+  color: #ff3055;
+  font-family: Inter, sans-serif;
+  font-size: 10px;
+  font-weight: 400;
+  line-height: normal;
+  margin-top: 8px;
+  margin-bottom: 32px;
+}
+
 @media screen and (max-width: 1280px) {
   .form-search {
     margin-bottom: 130px;
@@ -69,7 +84,7 @@
     font-size: 18px;
   }
 
-  .form-search__container {
+  .form-search__error {
     margin-bottom: 40px;
   }
 
