--- a/src/components/Main/Techs/Techs.css
+++ b/src/components/Main/Techs/Techs.css
@@ -55,7 +55,8 @@
 }
 
 .techs__list {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(7, auto);
   justify-content: center;
   list-style: none;
   padding: 0;
@@ -130,7 +131,8 @@
   }
 
   .techs__list {
-    margin: 50px 50px 0;
+    grid-template-columns: repeat(2, auto);
+    margin: 50px auto 0;
   }
 
   .techs__list {
