--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -37,6 +37,10 @@
   height: 38px;
 }
 
+.header__logo-link:hover {
+  transform: scale(1.1);
+}
+
 @media screen and (max-width: 1280px) {
   .header {
     padding: 18px 30px;
