--- a/src/components/Main/Portfolio/Portfolio.css
+++ b/src/components/Main/Portfolio/Portfolio.css
@@ -31,6 +31,10 @@
   width: 100%;
 }
 
+.portfolio__links-item:hover > span {
+  color: #a0a0a0;
+}
+
 .portfolio__nav-list-item {
   border-bottom: 1px #e6e6e6 solid;
   margin-top: 20px;
