--- a/src/components/Main/Promo/Promo.css
+++ b/src/components/Main/Promo/Promo.css
@@ -57,6 +57,11 @@
   margin-top: 146px;
 }
 
+.promo__container-link:hover {
+  border: 1px solid rgba(255, 255, 255);
+
+}
+
 @media screen and (max-width: 1280px) {
   .promo {
     flex-flow: column;
