--- a/src/components/Navigation/BurgerMenu/BurgerMenu.css
+++ b/src/components/Navigation/BurgerMenu/BurgerMenu.css
@@ -16,6 +16,11 @@
   right: 12px
 }
 
+.burger-menu__close-btn:hover {
+  background: transparent;
+  transform: scale(1.1);
+}
+
 .burger-menu__list {
   display: flex;
   flex-flow: column;
