--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -37,8 +37,7 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  border-bottom: 1px solid #e8e8e8;
-  padding-bottom: 16px;
+  position: relative;
 }
 
 .profile__input-label {
@@ -49,6 +48,9 @@
   font-weight: 500;
   line-height: normal;
   white-space: nowrap;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .profile__input {
@@ -56,6 +58,12 @@
   outline: none;
   width: 100%;
   text-align: end;
+  border-bottom: 1px solid #e8e8e8;
+  padding-bottom: 16px;
+}
+
+.profile__input:focus {
+  border-bottom: 1px solid #3456f3;
 }
 
 .profile__form-button {
