--- a/src/components/Movies/MoviesCardList/MoviesCardList.css
+++ b/src/components/Movies/MoviesCardList/MoviesCardList.css
@@ -23,7 +23,7 @@
   font-weight: 500;
   line-height: normal;
 
-  margin: 50px 0;
+  margin: 59px 0 79px;
   align-self: center;
   border-radius: 6px;
   background: #f9f9f9;
