--- a/src/components/Main/AboutProject/AboutProject.css
+++ b/src/components/Main/AboutProject/AboutProject.css
@@ -61,11 +61,11 @@
 }
 
 .about__progress-item1 {
-  flex: 1 0 25%;
+  flex: 1 0 228px;
 }
 
 .about__progress-item2 {
-  flex: 1 0 75%;
+  flex: 1 0 912px;
 }
 
 .about__progress-item-green {
@@ -74,6 +74,10 @@
   justify-content: center;
   background: #2be080;
   height: 36px;
+}
+
+.about__list-item {
+  flex: 1 0 550px;
 }
 
 .about__progress-item-gray {
