--- a/src/components/Movies/MoviesCard/MoviesCard.css
+++ b/src/components/Movies/MoviesCard/MoviesCard.css
@@ -5,12 +5,12 @@
 
 .movies__image {
   object-fit: cover;
-  width: 100%;
-  height: 100%;
+  width: 270px;
+  height: 151px;
 }
 
 .movies__description {
-  margin-top: 14px;
+  margin-top: 6px;
 }
 
 .movies__description-container {
@@ -57,7 +57,7 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  margin: 6px 0 0;
+  margin: 2px 0 0;
 }
 
 .movies__trailer-link:hover {
