--- a/src/components/Navigation/ProfileButton/ProfileButton.css
+++ b/src/components/Navigation/ProfileButton/ProfileButton.css
@@ -8,8 +8,8 @@
   border-radius: 40px;
   background: #2be080;
   box-shadow: 0px 3px 14px 0px rgba(0, 0, 0, 0.08);
-  padding: 3px;
   border: 0;
+  width: 100px;
 }
 
 .profile__link-text {
