--- a/src/components/Login/Signin.css
+++ b/src/components/Login/Signin.css
@@ -65,7 +65,7 @@
   font-style: normal;
   font-weight: 500;
   line-height: normal;
-  margin-top: auto;
+  margin-top: 197px;
 }
 
 .signin__form-button:disabled {
