--- a/src/components/PageNotFound/PageNotFound.css
+++ b/src/components/PageNotFound/PageNotFound.css
@@ -3,8 +3,7 @@
   flex-flow: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
-  position: relative;
+  margin-top: 246px;
 }
 
 .not-found__container {
@@ -42,7 +41,7 @@
   font-weight: 400;
   line-height: normal;
   margin: 0;
-  margin-bottom: 60px;
+  margin-top: 184px;
 }
 
 @media screen and (max-width: 768px) {
