--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -10,7 +10,6 @@
   display: flex;
   flex-flow: column;
   justify-content: space-between;
-  height: 100%;
   margin: auto 0px;
 }
 
@@ -22,7 +21,7 @@
   font-weight: 500;
   line-height: normal;
   margin: 0;
-  margin-bottom: 40px;
+  margin-bottom: 123px;
   text-align: center;
 }
 
@@ -86,6 +85,7 @@
   flex-flow: column;
   justify-content: center;
   gap: 16px;
+  margin-top: 187px;
 }
 
 .profile__form-text {
@@ -118,7 +118,7 @@
   font-weight: 400;
   line-height: normal;
   background: #3456f3;
-  height: 45px;
+  height: 16px;
 }
 
 .profile__btn-save:disabled {
@@ -132,5 +132,5 @@
   font-size: 10px;
   font-weight: 400;
   line-height: normal;
-  margin: 6px 0 24px;
+  margin: 6px 0 17px;
 }
