--- a/src/components/Register/Signup.css
+++ b/src/components/Register/Signup.css
@@ -65,7 +65,7 @@
   font-style: normal;
   font-weight: 500;
   line-height: normal;
-  margin-top: auto;
+  margin-top: 128px;
 }
 
 .signup__form-button:disabled {
