--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -57,6 +57,16 @@
 }
 
 @media screen and (max-width: 768px) {
+  .footer {
+    padding: 0 30px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .footer {
+    padding: 0 10px;
+  }
+
   .footer__text {
     font-size: 12px;
   }
@@ -64,7 +74,7 @@
   .footer__copyright-text {
     font-size: 12px;
     color: #a0a0a0;
-    margin-top: 30px;
+    margin-top: 29px;
   }
 
   .footer__nav-list-link {
@@ -84,6 +94,6 @@
   .footer__nav-list {
     flex-flow: column;
     align-items: center;
-    gap: 12px;
+    gap: 7px;
   }
 }
