--- a/src/components/Main/Portfolio/Portfolio.css
+++ b/src/components/Main/Portfolio/Portfolio.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-flow: column;
   background: #ffffff;
-  padding: 100px 70px;
+  padding: 111px 70px 183px;
 }
 
 .portfolio__title {
@@ -55,9 +55,9 @@
   letter-spacing: -1.2px;
 }
 
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: 768px) {
   .portfolio {
-    padding: 90px 50px;
+    padding: 70px 50px 148px;
   }
 
   .item__text {
@@ -67,9 +67,9 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 320px) {
   .portfolio {
-    padding: 70px 18px;
+    padding: 70px 14px 131px;
   }
 
   .portfolio__title {
@@ -78,11 +78,19 @@
   }
 
   .portfolio__nav {
-    margin-top: 40px;
+    margin-top: 19px;
   }
   .item__text {
     font-size: 18px;
     line-height: 28px;
     letter-spacing: -0.72px;
+  }
+
+  .item__image {
+    transform: scale(0.6);
+  }
+
+  .portfolio__nav-list-item {
+    padding-bottom: 19px;
   }
 }
