--- a/src/components/Header/LoginHeader/LoginHeader.css
+++ b/src/components/Header/LoginHeader/LoginHeader.css
@@ -9,8 +9,14 @@
   transform: scale(1.1);
 }
 
+@media screen and (max-width: 768px) {
+  .header-login {
+    padding-top: 232px;
+  }
+}
 @media screen and (max-width: 320px) {
   .header-login {
     justify-content: center;
+    padding-top: 56px;
   }
 }
