--- a/src/components/Layouts/Layout/Layout.css
+++ b/src/components/Layouts/Layout/Layout.css
@@ -7,6 +7,12 @@
 
 @media screen and (max-width: 768px) {
   .layout {
-    max-width: 1280px;
+    max-width: 768px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .layout {
+    max-width: 320px;
   }
 }
