--- a/src/components/Register/Signup.css
+++ b/src/components/Register/Signup.css
@@ -105,12 +105,18 @@
 }
 
 @media screen and (max-width: 320px) {
+  .signup {
+    margin-top: 49px;
+  }
+
   .signup__form-title {
     text-align: center;
+    margin-bottom: 81px;
   }
 
   .signup__form-button {
     font-size: 12px;
+    margin-top: 217px;
   }
 
   .signup__form-text {
@@ -119,5 +125,9 @@
 
   .signup__form-link {
     font-size: 12px;
+  }
+
+  .signup__form-nav {
+    margin-top: 13px;
   }
 }
