--- a/src/components/Login/Signin.css
+++ b/src/components/Login/Signin.css
@@ -105,12 +105,18 @@
 }
 
 @media screen and (max-width: 320px) {
+  .signin {
+    margin-top: 49px;
+  }
+
   .signin__form-title {
     text-align: center;
+    margin-bottom: 81px;
   }
 
   .signin__form-button {
     font-size: 12px;
+    margin-top: 286px;
   }
 
   .signin__form-text {
