--- a/src/components/PageNotFound/PageNotFound.css
+++ b/src/components/PageNotFound/PageNotFound.css
@@ -44,16 +44,28 @@
   margin-top: 184px;
 }
 
+@media screen and (max-width: 768px) {
+  .not-found {
+    margin-top: 407px;
+  }
+}
+
 @media screen and (max-width: 320px) {
+  .not-found {
+    margin-top: 330px;
+  }
+
   .not-found__container-title {
     font-size: 80px;
   }
 
   .not-found__container-text {
     font-size: 12px;
+    margin-top: 10px;
   }
 
   .not-found__link-back {
     font-size: 12px;
+    margin-top: 284px;
   }
 }
