--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -42,6 +42,10 @@
   transform: scale(1.1);
 }
 
+.header__nav {
+  margin-left: 60px;
+}
+
 @media screen and (max-width: 768px) {
   .header {
     padding: 18px 30px;
