--- a/src/components/Main/AboutMe/AboutMe.css
+++ b/src/components/Main/AboutMe/AboutMe.css
@@ -71,7 +71,7 @@
   font-style: normal;
   font-weight: 500;
   line-height: normal;
-  margin-top: auto;
+  margin: auto 0 0 0;
 }
 
 .me__private-image {
