--- a/src/components/Main/Promo/Promo.css
+++ b/src/components/Main/Promo/Promo.css
@@ -54,7 +54,7 @@
   width: 129px;
   height: 36px;
   background-color: transparent;
-  margin-top: 146px;
+  margin: 146px 0 0 0;
 }
 
 .promo__container-link:hover {
@@ -96,7 +96,7 @@
   }
 
   .promo__container-link {
-    margin-top: 92px;
+    margin: 92px 0 0 0;
   }
 }
 
@@ -122,7 +122,7 @@
   }
 
   .promo__container-link {
-    margin-top: 80px;
+    margin: 80px 0 0 0;
     width: 129px
 
   }
