--- a/src/components/Movies/MoviesCard/MoviesCard.css
+++ b/src/components/Movies/MoviesCard/MoviesCard.css
@@ -5,7 +5,7 @@
 
 .movies__image {
   object-fit: cover;
-  width: 270px;
+  width: 100%;
   height: 151px;
 }
 
@@ -60,6 +60,10 @@
   margin: 2px 0 0;
 }
 
+.movies__trailer-link {
+  width: 100%;
+}
+
 .movies__trailer-link:hover {
   transform: scaleY(1.1);
 }
@@ -69,10 +73,6 @@
     padding-bottom: 80px;
   }
 
-  .movies__image {
-    width: 339px;
-    height: 190px;
-  }
 
   .movies__description-container {
     padding-bottom: 25px;
@@ -81,19 +81,23 @@
   .movies__duration {
     margin-top: 6px;
   }
-}
-
-@media screen and (max-width: 550px) {
-  .movies__title {
-    font-size: 12px;
-  }
 
   .movies__image {
-    width: 300px;
-    height: 168px;
+    height: 190px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .movies__title {
+    font-size: 12px;
   }
 
   .movies__duration {
     font-size: 10px;
   }
+
+  .movies__image {
+    height: 168px;
+  }
 }
+
