--- a/src/components/Movies/MoviesCardList/MoviesCardList.css
+++ b/src/components/Movies/MoviesCardList/MoviesCardList.css
@@ -29,18 +29,26 @@
   background: #f9f9f9;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1100px) {
   .movies__list {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .movies__list { 
     grid-template-columns: repeat(2, 1fr);
     gap: 30px;
   }
 }
 
-@media screen and (max-width: 500px) {
-  .movies__list {
-    grid-template-columns: 1fr;
-  }
-
+@media screen and (max-width: 500px){
+  .movies__list { 
+    grid-template-columns: repeat(1, 1fr);
+    gap: 34px;
+    
+  } 
   .movies-page__more {
     width: 240px;
     margin-top: 75px;
