--- a/src/components/Main/AboutMe/AboutMe.css
+++ b/src/components/Main/AboutMe/AboutMe.css
@@ -76,13 +76,13 @@
 
 .me__private-image {
   width: 270px;
-  height: 307px;
+  height: 327px;
   border-radius: 8px;
 }
 
 @media screen and (max-width: 1000px) {
   .me {
-    padding: 90px 50px 0;
+    padding: 88px 50px 0;
   }
 
   .me__private-name {
@@ -104,11 +104,12 @@
   }
 
   .me__private-image {
-    width: 255px
+    width: 255px;
+    height: 307px;
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 500px) {
   .me {
     padding: 70px 14px 0;
   }
@@ -117,7 +118,7 @@
     font-size: 18px;
     line-height: normal;
     letter-spacing: -0.72px;
-    padding-bottom: 28px;
+    padding-bottom: 30px;
   }
 
   .me__private-container {
