--- a/src/components/Navigation/BurgerMenu/BurgerMenu.css
+++ b/src/components/Navigation/BurgerMenu/BurgerMenu.css
@@ -70,7 +70,18 @@
   padding: 24px 90px 90px;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 770px) {
+  .burger-menu__content {
+    width: 520px;
+    padding: 0;
+  }
+
+  .burger-menu__list {
+    margin-top: 160px;
+  }
+}
+
+@media screen and (max-width: 500px) {
   .burger-menu__content {
     width: 100%;
     padding: 0;
@@ -84,6 +95,7 @@
 
   .burger-menu__list {
     gap: 24px;
+    margin-top: 135px;
   }
 
   .active {
@@ -91,6 +103,6 @@
   }
 
   .burger-menu__btn-container {
-    margin-bottom: 95px;
+    margin-bottom: 46px;
   }
 }
