--- a/src/components/Movies/MoviesCardList/MoviesCardList.css
+++ b/src/components/Movies/MoviesCardList/MoviesCardList.css
@@ -29,6 +29,10 @@
   background: #f9f9f9;
 }
 
+.movies-page__more--hidden {
+  visibility: collapse;
+}
+
 @media screen and (max-width: 1100px) {
   .movies__list {
     grid-template-columns: repeat(3, 1fr);
@@ -49,6 +53,7 @@
     gap: 34px;
     
   } 
+
   .movies-page__more {
     width: 240px;
     margin-top: 64px;
