--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -4,6 +4,12 @@
   padding: 70px 70px 80px;
 }
 
+.movies-page__empty {
+  text-align: center;
+  font-family: Inter, sans-serif;
+  font-size: 16px;
+}
+
 @media screen and (max-width: 768px) {
   .movies-page {
     padding: 69px 28px;
